--- a/peleadores/templates/principal/principal.html
+++ b/peleadores/templates/principal/principal.html
@@ -66,6 +66,7 @@
         <a href="{% url 'comparar_peleadores' %}">Comparar peleadores</a>
         <a href="{% url 'ufc_noticias' %}">Ultimas noticias de la UFC</a>
         <a href="{% url 'estadisticas' %}">Estadisticas de la UFC</a>
+        <a href="{% url 'eventos' %}">Eventos de la UFC</a>
     </div>
 </body>
 </html>
