--- a/peleadores/templates/peleadores/ufc_eventos.html
+++ b/peleadores/templates/peleadores/ufc_eventos.html
@@ -69,11 +69,16 @@
             background-color: #ffc600;
             padding: 10px 16px;
             border-radius: 6px;
-            color: white;
+            color: #333;
         }
 
         .back a:hover {
             background-color: #dbac02;
+        }
+
+        .back {
+            display: block;
+            text-align: center;
         }
     </style>
 </head>
